# src/currencyexchange/src/routes/currency.js
@@ -3,7 +3,7 @@
  */
 
 import { Router } from "express";
-import { getCurrencyExchangeRate, getCurrencyExchangeRates } from "../services/serviceHandler";
+import { getCurrencyExchangeRate, getCurrencyExchangeRates, convertAlgorithm } from "../services/serviceHandler";
 
 var router = Router();
 /* GET list of currency locations */
@@ -17,6 +17,26 @@ router.get("/", function (req, res, next) {
       next(err);
     });
   });
+
+
+/* POST
+    /currency/search/:
+    post:
+    */
+
+/* GET
+/currency/{currencyFromAmount}/{currencyFromCode}/{currencyToCode}:
+*/
+router.get("/:currencyFromAmount/:currencyFromCode/:currencyFromCode", (req, res, next) => {
+  var convertAlgorithmRef = convertAlgorithm(fromValue, fromCurrencyCode, toCurrencyCode, 'latest');
+  convertAlgorithmRef.then(data => {
+    res.send({result: data});
+  }).catch( err => {
+    res.sendStatus(500);
+    next(err);
+  });
+
+});
 
 /* GET exchange rate for currency code */
 router.get("/:code", function (req, res, next) {
